vh units shouldn't add controls height when controls are locked to hidden.

Since the initial containing block is now fixed to be the size as if the
browser controls are always shown -- and we want 100vh to appear as if the
viewport is always hidden -- we add the browser controls height to the layout
height used for viewport units.

One exception to this when the browser controls are locked in a hidden state.
In that case, the ICB is actually set to fill the full viewport. In that case
adding the controls height actually makes 100vh taller than the viewport. This
patch avoids adding the controls height when controls are locked hidden.

BUG=688738

Review-Url: https://codereview.chromium.org/2716453004
Cr-Commit-Position: refs/heads/master@{#452991}

Former-commit-id: 85fff922d53f16ad66d8d39cb066cbcda1640052